feat: Add CV button for viewing or editing

--- a/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
@@ -41,7 +41,7 @@
         <p-button
           label="Habilidades"
           styleClass="p-button-sm p-button-rounded p-button-secondary"
-          (click)="isSkillsListEmpty ? null : techSkills.toggle($event)"
+          (click)="handleTechBtnClick($event)"
           [disabled]="isSkillsListEmpty"
         ></p-button>
       </div>
