--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -17,9 +17,11 @@
           <div class="border-round px-2">
             <button
               (click)="showDialog(product.idDocument)"
-              class="w-full h-8rem border-none border-round flex flex-column align-items-center cursor-pointer"
+              class="w-full h-8rem border-none border-round flex flex-column align-items-center cursor-pointer p-0"
             >
-              <div class="h-6rem w-full border-round-top overflow-hidden">
+              <div
+                class="h-6rem w-full border-round-top overflow-hidden surface-50"
+              >
                 <img src="./assets/pdfIcon.svg" [alt]="" class="file-image" />
               </div>
               <div
