--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
@@ -174,6 +174,7 @@
         <p-button
           label="Contactar"
           icon="pi pi-phone"
+          (click)="openWhatsApp()"
           styleClass="p-button-sm p-button-success w-full"
         ></p-button>
       </div>
@@ -532,6 +533,169 @@
             pButton
             pRipple
             label="Editar"
+            icon="pi pi-check"
+            type="submit"
+            class="p-button-success w-full"
+          ></button>
+        </div>
+      </div>
+    </form>
+  </div>
+</p-dialog>
+
+<p-dialog
+  [(visible)]="addFileDialog"
+  [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
+  [style]="{ width: '50vw' }"
+  [draggable]="false"
+  [resizable]="false"
+  [modal]="true"
+>
+  <ng-template pTemplate="header">
+    <div class="flex align-items-center w-12">
+      <span class="text-lg md:text-xl font-semibold text-800">
+        {{ titleForCv }}
+      </span>
+    </div>
+  </ng-template>
+  <div class="w-12 flex flex-column align-items-center">
+    <div class="flex align-items-center w-12 pb-3">
+      <span class="text-sm md:text-base font-normal text-500">
+        {{ paragraphForCV }}
+      </span>
+    </div>
+
+    <ng-template #pdfView>
+      <div class="w-12 flex justify-content-center">
+        <div
+          class="w-3 h-15rem border-none border-round flex flex-column align-items-center surface-100 relative"
+        >
+          <div class="h-12rem w-full border-round-top overflow-hidden">
+            <img src="./assets/pdfIcon.svg" [alt]="" class="file-image" />
+          </div>
+          <div
+            class="h-3rem w-full border-round-bottom surface-50 flex align-items-end"
+          >
+            <div
+              class="flex w-full flex-wrap align-items-center align-content-start"
+            >
+              <div
+                class="w-9 flex flex-column align-items-center justify-content-center"
+              >
+                <div
+                  class="w-12 border-round text-xs text-500 flex align-items-center align-content-start pl-2"
+                >
+                  <div
+                    class="w-10rem flex align-items-center align-content-start white-space-nowrap overflow-hidden text-overflow-ellipsis"
+                  >
+                    {{ customTalent?.resume?.documentName }}
+                  </div>
+                </div>
+                <div
+                  class="w-12 border-round text-xs text-500 flex align-items-center pl-2"
+                >
+                  {{ customTalent?.resume?.documentType }}
+                </div>
+              </div>
+              <div
+                class="w-3 flex flex align-items-center justify-content-end my-1"
+              >
+                <button
+                  type="button"
+                  class="mx-1 back-icon-btn"
+                  *ngIf="isRecruiter"
+                  (click)="openPdfInNewTab()"
+                >
+                  <i class="pi pi-eye text-sm"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="my-1 absolute top-0 right-0">
+            <button
+              type="button"
+              class="mx-1 back-icon-btn"
+              *ngIf="isRecruiter"
+              (click)="onBtnUpdatePdf()"
+            >
+              <i class="pi pi-pencil text-sm"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+
+    <form
+      class="w-12 flex flex-column"
+      autocomplete="off"
+      *ngIf="enableEditViewPdf; else pdfView"
+      [formGroup]="cvForm"
+      (ngSubmit)="onSveFile()"
+    >
+      <button
+        pButton
+        class="p-button-outlined border-300 w-full flex flex-column"
+        (click)="fileUpload.click()"
+      >
+        <i
+          class="pi pi-cloud-upload px-2 pt-5 text-2xl text-bluegray-400"
+          *ngIf="!cvUploaded"
+        ></i>
+        <i
+          class="pi pi-check px-2 pt-5 text-2xl text-teal-500"
+          *ngIf="cvUploaded"
+        ></i>
+        <span
+          class="px-3 pt-5 flex align-items-center justify-content-center font-bold border-round"
+          style="color: #0b85c3"
+          [ngClass]="{ 'text-teal-500': cvUploaded }"
+          >{{ fileText }}</span
+        >
+        <span
+          class="text-sm text-500 pt-1 flex align-items-center justify-content-center border-round"
+          >{{ fileDetailsText }}</span
+        >
+        <input
+          #fileUpload
+          id="file"
+          type="file"
+          accept=".pdf"
+          style="display: none"
+          formControlName="file"
+          (change)="onFileUpload($event)"
+        />
+      </button>
+      <div class="w-12 py-2">
+        <small
+          id="file"
+          class="hidden"
+          [ngClass]="{
+            'p-error block text-left': isValidCvField('file')
+          }"
+          >Este campo no puede estar vacío.</small
+        >
+      </div>
+      <div class="w-12 flex flex-wrap pt-3">
+        <div
+          class="w-6 p-2 pl-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Cancelar"
+            icon="pi pi-times"
+            type="button"
+            class="p-button-outlined p-button-secondary w-full"
+            (click)="hideResumeDialog()"
+          ></button>
+        </div>
+        <div
+          class="w-6 p-2 pr-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Subir"
             icon="pi pi-check"
             type="submit"
             class="p-button-success w-full"
