--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -1,7 +1,18 @@
 <div class="flex flex-wrap border-round m-1 sm:my-2 sm:mr-2 sm:ml-4">
+  <ng-template #noDocuments>
+    <div
+      class="w-12 sm:w-8 p-1 flex align-items-center justify-content-center text-blue-400"
+    >
+      Sube tu certificado, diploma o algún archivo que respalde tus aptitudes.
+      <i
+        class="pi pi-chevron-right text-yellow-500 mx-2 px-2 fadeinleft animation-duration-1000 animation-iteration-infinite"
+      ></i>
+    </div>
+  </ng-template>
   <div
     class="w-12 p-1 flex align-items-center justify-content-center"
     [ngClass]="{ 'sm:w-8': isRecruiter }"
+    *ngIf="documents.length != 0; else noDocuments"
   >
     <p-carousel
       [value]="documents"
