--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
@@ -88,7 +88,7 @@
                 pButton
                 pRipple
                 label="Crear Favorito"
-                icon="pi pi-check"
+                icon="pi pi-list"
                 type="button"
                 class="p-button-success w-full"
                 [disabled]="search.length === 0"
@@ -156,7 +156,7 @@
           [readonly]="true"
         ></p-rating>
         <span class="mx-2 text-500 text-xs sm:text-sm font-light"
-          >{{ totFeedbacks }} feedbacks
+          >{{ totFeedbacks | i18nPlural : feedbackMap }}
         </span>
       </div>
     </div>
