fix: Resolve issue on favorite list

--- a/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
@@ -135,6 +135,7 @@
           styleClass="p-button-sm p-button-rounded p-button-secondary"
           (click)="isFavoriteListEmpty ? null : favorite.toggle($event)"
           [disabled]="isFavoriteListEmpty"
+          (click)="onFavorite()"
         ></p-button>
       </div>
 
