--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.scss
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.scss
@@ -9,6 +9,10 @@
 .heart-icon:hover {
   color: var(--bdt-bright-pink);
 }
+
+.btn-text {
+  color: var(--bdt-strong-blue);
+}
 :host ::ng-deep {
   .p-inputNumber input {
     width: 100%;
