--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.scss
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.scss
@@ -1,3 +1,5 @@
+@import "_variables";
+
 .content {
   height: calc(100vh - 180px);
 }
@@ -7,12 +9,12 @@
   .p-chip {
     &.custom-chip {
       background: var(--blue-50);
-      color: var(--blue-600);
+      color: var(--bdt-strong-blue);
     }
 
     &.custom-red-chip {
       background: var(--pink-50);
-      color: var(--pink-500);
+      color: var(--bdt-strong-pink);
     }
 
     &-text {
