--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
@@ -118,16 +118,16 @@
       </div>
       <div class="flex flex-wrap">
         <div
-          class="w-12 sm:w-5 border-round flex align-items-center justify-content-start"
+          class="w-12 sm:w-max border-round flex align-items-center justify-content-start"
         >
           <span class="text-500 text-xs sm:text-sm font-light">{{
             workAs.name
           }}</span>
         </div>
         <div
-          class="w-12 sm:w-7 border-round flex align-items-center justify-content-around profile-country-salary"
+          class="w-12 sm:w-max border-round flex align-items-center justify-content-around profile-country-salary"
         >
-          <span class="text-500 text-xs sm:text-sm font-light">
+          <span class="mx-2 text-500 text-xs sm:text-sm font-light">
             <i class="pi pi-map-marker text-xs sm:text-sm text-800"></i>
             {{ countryCity.city | titlecase }},
             {{ countryCity.country | titlecase }}
