--- a/Front/Banco-de-Talentos/src/app/shared/components/availability/availability.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/availability/availability.component.html
@@ -15,7 +15,7 @@
 </div>
 
 <p-dialog
-  [visible]="editAvailabilityDialog"
+  [(visible)]="editAvailabilityDialog"
   [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
   [style]="{ width: '50vw' }"
   [draggable]="false"
