feat: :sparkles: Added planilla data whether it is by RxH or planilla

--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
@@ -134,7 +134,24 @@
           </span>
           <span class="text-500 text-xs sm:text-sm font-light">
             <i class="pi pi-dollar text-xs sm:text-sm text-800"></i>
-            {{ customTalent?.initialSalary }} - {{ customTalent?.finalSalary }}
+            <ng-container
+              *ngIf="
+                (customTalent?.initialSalaryRxh ?? 0) > 0 &&
+                (customTalent?.finalSalaryRxh ?? 0) > 0
+              "
+            >
+              RxH {{ customTalent?.initialSalaryRxh }} -
+              {{ customTalent?.finalSalaryRxh }} |
+            </ng-container>
+            <ng-container
+              *ngIf="
+                (customTalent?.initialSalaryPlanilla ?? 0) > 0 &&
+                (customTalent?.finalSalaryPlanilla ?? 0) > 0
+              "
+            >
+              Planilla {{ customTalent?.initialSalaryPlanilla }} -
+              {{ customTalent?.finalSalaryPlanilla }}
+            </ng-container>
           </span>
           <button
             type="button"
@@ -363,6 +380,71 @@
           </div>
         </div>
       </div>
+      <div class="flex align-items-center w-12 pb-3">
+        <span class="text-sm md:text-base font-normal text-500">
+          Monto por RxH
+        </span>
+      </div>
+      <div class="w-12 flex flex-wrap align-items-center">
+        <div
+          class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pr-3"
+        >
+          <div class="w-12 flex flex-column justify-content-start mb-2">
+            <label
+              for="inputNumberRxh"
+              class="block text-left mb-2 font-medium text-bluegray-800"
+              >Monto Inicial</label
+            >
+            <p-inputNumber
+              inputId="inputNumberRxh"
+              class="w-full"
+              styleClass="w-full"
+              [min]="0"
+              [max]="10000"
+              formControlName="iAmountRxH"
+            ></p-inputNumber>
+            <small
+              id="inputNumberRxh"
+              class="hidden"
+              [ngClass]="{
+                'p-error block text-left': isValidSalaryField('iAmountRxH')
+              }"
+              >Este campo no puede estar vacío.</small
+            >
+          </div>
+        </div>
+        <div
+          class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pl-3"
+        >
+          <div class="w-12 flex flex-column justify-content-start mb-2">
+            <label
+              for="inputNumberRxh2"
+              class="block text-left mb-2 font-medium text-bluegray-800"
+              >Monto Final</label
+            >
+            <p-inputNumber
+              inputId="inputNumberRxh2"
+              styleClass="w-12"
+              [min]="0"
+              [max]="10000"
+              formControlName="fAmountRxH"
+            ></p-inputNumber>
+            <small
+              id="inputNumberRxh2"
+              class="hidden"
+              [ngClass]="{
+                'p-error block text-left': isValidSalaryField('fAmountRxH')
+              }"
+              >{{ getErrFnAmountField("fAmountRxH") }}</small
+            >
+          </div>
+        </div>
+      </div>
+      <div class="flex align-items-center w-12 pb-3">
+        <span class="text-sm md:text-base font-normal text-500">
+          Monto por planilla
+        </span>
+      </div>
       <div class="w-12 flex flex-wrap align-items-center">
         <div
           class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pr-3"
@@ -379,13 +461,13 @@
               styleClass="w-full"
               [min]="0"
               [max]="10000"
-              formControlName="iAmount"
+              formControlName="iAmountPlanilla"
             ></p-inputNumber>
             <small
               id="inputNumber"
               class="hidden"
               [ngClass]="{
-                'p-error block text-left': isValidSalaryField('iAmount')
+                'p-error block text-left': isValidSalaryField('iAmountPlanilla')
               }"
               >Este campo no puede estar vacío.</small
             >
@@ -405,15 +487,15 @@
               styleClass="w-12"
               [min]="0"
               [max]="10000"
-              formControlName="fAmount"
+              formControlName="fAmountPlanilla"
             ></p-inputNumber>
             <small
               id="inputNumber2"
               class="hidden"
               [ngClass]="{
-                'p-error block text-left': isValidSalaryField('fAmount')
+                'p-error block text-left': isValidSalaryField('fAmountPlanilla')
               }"
-              >{{ getErrFnAmountField("fAmount") }}</small
+              >{{ getErrFnAmountField("fAmountPlanilla") }}</small
             >
           </div>
         </div>
