--- a/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.scss
+++ b/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.scss
@@ -2,15 +2,15 @@
     .p-card-body {
         padding-top: 0;
     }
-    
+
     .p-card-content {
         padding-top: 0;
     }
-    
+
     .p-scrollpanel-content {
         padding: 18px;
     }
-    
+
     .p-button-label {
         text-align: center;
     }
@@ -64,6 +64,16 @@
     font-size: 14px;
     line-height: 20px;
     color: #344054;
+}
+
+.subHeaderText2 {
+  margin: 8px 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #344054;
 }
 
 .headerText {
