--- a/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
@@ -188,7 +188,7 @@
   <ng-template pTemplate="header">
     <div class="flex align-items-center justify-content-between w-12">
       <span class="text-lg md:text-xl font-semibold text-800">
-        Edita tu experiencia
+        Edita tu habilidad en el idioma
       </span>
       <button
         class="text-red-300 hover:text-red-500 mx-1 cursor-pointer border-none bg-white"
